--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="profile" class="view hidden">
             <button class="toggle-button" onclick="toggleView()">☰</button>
             <h1>@copyright</h1>
-            <img src="img/photo.jpeg" alt="Your Photo" class="profile-photo">
+            <img src="photo.jpeg" alt="Your Photo" class="profile-photo">
             <p>© 2024 <span mailto:someshgnal123©gmail.com>someshgnal123©gmail.com</span><br> | All Rights Reserved |</p>
         </div>
     </div>
